<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>de.morihofi.acmeserver</groupId>
        <artifactId>acmeserver-parent</artifactId>
        <version>3.0.0</version>
        <relativePath>../acmeserver-parent/pom.xml</relativePath>
    </parent>

    <artifactId>acmeserver-revocation</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>de.morihofi.acmeserver</groupId>
            <artifactId>acmeserver-httpserver-intf</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>de.morihofi.acmeserver</groupId>
            <artifactId>acmeserver-types</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>de.morihofi.acmeserver</groupId>
            <artifactId>acmeserver-cryptography</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.jimfs</groupId>
            <artifactId>jimfs</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
